[#9113] use RetrievalMode for controlling retrieval version handling

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -121,3 +121,7 @@ components:
       type: string
       default: NOP
       enum: [NOP, NEW, MODIFIED, REMOVED]
+    RetrievalMode:
+      type: string
+      default: NORMAL
+      enum: [NORMAL, LATEST, EXACT_VERSION]
