[#9069] add required field to FilterGroupMeta
This way filterFieldMetas and filterGroupMetas will always be
initialized.

--- a/api-domain/src/main/resources/descriptors/filter-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filter-api.yaml
@@ -53,6 +53,7 @@ components:
             $ref: '#/components/schemas/FilterOperation'
     FilterGroupMeta:
       type: object
+      required: [filterGroupMetas,filterFieldMetas]
       properties:
         id:
           type: string
