[#9155] add parentIdentifier to UiTreeNode

--- a/api-domain/src/main/resources/descriptors/uitree-api.yaml
+++ b/api-domain/src/main/resources/descriptors/uitree-api.yaml
@@ -81,6 +81,8 @@ components:
           format: uri
         identifier:
           type: string
+        parentIdentifier:
+          type: string
         icon:
           type: string
         caption:
