[#9377] add submit to UiAction

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -346,6 +346,8 @@ components:
           type: string
         inputType:
           $ref: '#/components/schemas/UiActionInputType'
+        submit:
+          type: boolean
     UiActionInputType:
       type: string
       default: none
