[#9415] add tree API as generic BFF API

--- a/api-domain/src/main/resources/descriptors/uitree-api.yaml
+++ b/api-domain/src/main/resources/descriptors/uitree-api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: UiTree domain objects
+  title: Uitree Api
   description: Tree domain objects
   termsOfService: ''
   contact:
